añadido las cookies al index

--- a/index.html
+++ b/index.html
@@ -12,8 +12,31 @@
     <script src="header.js"></script>
     <script src="js/login.js"></script>
     <input  id="selector" type="hidden" value="0">
+    
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-MB7HJ8K');</script>
+        <!-- End Google Tag Manager -->
 </head>
 <body>
+
+    <!-- ---------COKIES --------->
+
+    <div class="aviso-cookies " id="cookies">
+        <img class="galleta" src="multimedia/cookies/cookie.png" alt="galleta">
+        <h3 class="titulo">Cookies</h3>
+        <p class="parrafo">Utilizamos cookies propias y de terceros  para mejorar nuestros servicios</p>
+        <button class="boton" id="btn-aceptar-cookies">De acuerdo</button>
+        <a class="enlace" href="aviso_legal.html">Aviso de cookies</a>
+    </div>
+
+    <div class="fondo-aviso-cookies " id="fondo-aviso-cookies"></div>
+
+    <script src="js/aviso-cookies.js"></script>
+
+    <!-------- AQUI TERMINA APARTADO DE COOKIES -------->
     <!--HEADER-->
     <header id="header">
         <!--NAV-->
@@ -88,7 +111,7 @@
               <img src="multimedia/inicio-niños.jpeg" alt=" imagen de niño">
   
       </div>
-  
+      
       <div id="container-paragrag">
           <p>
             ¡Bienvenidos a Pharmakid, tu guía completa de medicamentos pediátricos! En Pharmakid, nos dedicamos a proporcionar información confiable y fácil de entender sobre medicamentos específicamente diseñados para niños. Sabemos lo importante que es cuidar la salud de los más pequeños de la casa, y nuestro objetivo es brindarte una herramienta útil y segura para tomar decisiones informadas.
