Comprobacion del usuario y cambios a la carperta bddd

--- a/loggin.html
+++ b/loggin.html
@@ -75,7 +75,7 @@
     <!--LOGINNNN-->
     <p id="divError"></p>
     <div id="contenedor">
-        <form id="formulario" action="#" method="post">
+        <form id="formulario" action="bbdd/conexionUser.php" method="post">
             <div class="container_login">
                 <!--<img class="signin" src="imgs/login.jpg" alt="no funciona">/-->
                 <i class="fa-solid fa-user-lock login"></i>
@@ -91,6 +91,7 @@
             </div>
    
             <input type="button" value="LOGIN" id="buttonLogin">
+            <input type="submit" value="Entrar">
 
         </form>
     </div>
